<resources>
    <string name="app_name">STAMPA</string>
    <string name="version_name">1.0</string>
    <string name="title">Product Details</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="button_login">Masuk</string>
    <string name="no_account">Tidak Punya Akun?</string>
    <string name="daftar">Daftar</string>

</resources>
