<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="325dp"
        android:layout_height="390dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:background="@drawable/bg_round" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/profile_button" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/login_username"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/login_password"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lupa_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_username"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:background="@drawable/button_round"
        android:text="@string/button_login"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:background="@drawable/btn_round2"
        android:text="@string/daftar"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>